--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
     <div class="content">
         <h2>About Me</h2>
-        <p>Hello! My name is [Your Name]. I am passionate about [your interests or profession]. In my free time, I enjoy spending time with my dog, exploring nature, and learning new things. This page is a little introduction to who I am!</p>
+        <p>Hello! My name is SwanYiWinThuYa. I am passionate about web development. In my free time, I enjoy spending time with my dog, exploring nature, and learning new things. This page is a little introduction to who I am!</p>
         <img src="dog.jpeg" alt="A cute dog">
     </div>
 </body>
